update guide util